fix(scss) wrapped into component

--- a/src/data-table.component.scss
+++ b/src/data-table.component.scss
@@ -1,105 +1,107 @@
-:host {
-  position: relative;
-  box-sizing: border-box;
-  display: block;
-  max-width: 100%;
-}
-
-@import '~@angular/material/theming';
-
-$tablet-width: 720px;
-$app-blue: rgba(48, 153, 197, 255);
-
-table {
-  width: 100%;
-
-  td.mat-cell,
-  th.mat-cell {
-    border-bottom-color: rgba(0, 0, 0, 0.12);
-    border-left-color: rgba(0, 0, 0, 0.12);
-    padding: 0;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-bottom-style: solid;
-    border-left-style: solid;
+ic-data-table {
+  :host {
+    position: relative;
+    box-sizing: border-box;
+    display: block;
+    max-width: 100%;
   }
 
-  tr.detail-row {
-    height: 0px;
-    td,
-    th {
-      border-bottom-width: 0;
-    }
-  }
+  @import '~@angular/material/theming';
 
-  tr.expanded-detail ~ tr.detail-row {
-    td,
-    th {
+  $tablet-width: 720px;
+  $app-blue: rgba(48, 153, 197, 255);
+
+  table {
+    width: 100%;
+
+    td.mat-cell,
+    th.mat-cell {
+      border-bottom-color: rgba(0, 0, 0, 0.12);
+      border-left-color: rgba(0, 0, 0, 0.12);
+      padding: 0;
       border-bottom-width: 1px;
+      border-left-width: 1px;
+      border-bottom-style: solid;
+      border-left-style: solid;
+    }
+
+    tr.detail-row {
+      height: 0px;
+      td,
+      th {
+        border-bottom-width: 0;
+      }
+    }
+
+    tr.expanded-detail ~ tr.detail-row {
+      td,
+      th {
+        border-bottom-width: 1px;
+      }
+    }
+
+    .detail {
+      display: flex;
+      overflow: hidden;
+    }
+
+    .master-detail-header,
+    .master-detail-cell {
+      min-width: 2.5rem;
+      max-width: 2.5rem;
+      width: 2.5em;
+      border-left-width: 0px !important;
+    }
+    th {
+      text-align: left;
+      font-weight: normal;
+    }
+
+    th.mat-header-cell:not(.master-detail-header),
+    td.mat-cell:not(.master-detail-cell),
+    th.mat-cell:not(.master-detail-cell) {
+      border-left: 1px solid #efefef;
+      padding-left: 8px;
+      padding-right: 8px;
+      &:first-child {
+        border-left: none;
+      }
+    }
+
+    th,
+    td {
+      min-width: 2.5rem;
     }
   }
 
-  .detail {
-    display: flex;
+  .cell-content {
     overflow: hidden;
   }
 
-  .master-detail-header,
-  .master-detail-cell {
-    min-width: 2.5rem;
-    max-width: 2.5rem;
-    width: 2.5em;
-    border-left-width: 0px !important;
-  }
-  th {
-    text-align: left;
-    font-weight: normal;
+  .gray,
+  .grey {
+    color: rgba(192, 192, 192, 0.8);
   }
 
-  th.mat-header-cell:not(.master-detail-header),
-  td.mat-cell:not(.master-detail-cell),
-  th.mat-cell:not(.master-detail-cell) {
-    border-left: 1px solid #efefef;
-    padding-left: 8px;
-    padding-right: 8px;
-    &:first-child {
-      border-left: none;
-    }
+  .loadOverlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.15);
+    z-index: 9001; // IT'S OVER 9000
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
-  th,
-  td {
-    min-width: 2.5rem;
+  .noRowsToShowOverlay {
+    margin: 1.5rem;
+    display: flex;
+    flex: none;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
-}
-
-.cell-content {
-  overflow: hidden;
-}
-
-.gray,
-.grey {
-  color: rgba(192, 192, 192, 0.8);
-}
-
-.loadOverlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.15);
-  z-index: 9001; // IT'S OVER 9000
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.noRowsToShowOverlay {
-  margin: 1.5rem;
-  display: flex;
-  flex: none;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
 }
